--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,10 @@ task fatJar(type: Jar) {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'com.apple', name: 'AppleJavaExtensions', version: '1.4'
-    compile group: 'org.bitbucket.mstrobel', name: 'procyon-core', version: '0.5.32'
-    compile group: 'org.bitbucket.mstrobel', name: 'procyon-expressions', version: '0.5.32'
-    compile group: 'org.bitbucket.mstrobel', name: 'procyon-compilertools', version: '0.5.32'
-    compile group: 'org.bitbucket.mstrobel', name: 'procyon-reflection', version: '0.5.32'
-    compile group: 'com.fifesoft', name: 'rsyntaxtextarea', version: '2.6.1'
+    implementation group: 'com.apple', name: 'AppleJavaExtensions', version: '1.4'
+    implementation group: 'org.bitbucket.mstrobel', name: 'procyon-core', version: '0.5.32'
+    implementation group: 'org.bitbucket.mstrobel', name: 'procyon-expressions', version: '0.5.32'
+    implementation group: 'org.bitbucket.mstrobel', name: 'procyon-compilertools', version: '0.5.32'
+    implementation group: 'org.bitbucket.mstrobel', name: 'procyon-reflection', version: '0.5.32'
+    implementation group: 'com.fifesoft', name: 'rsyntaxtextarea', version: '2.6.1'
 }
